--- a/referencias.bib
+++ b/referencias.bib
@@ -1,106 +1,3 @@
-@article{EngelHerbert05,
-	title           = {Calculation of the magnetic stray field of a uniaxial magnetic domain},
-	author          = {Engel-Herbert, R. and Hesjedal, T.},
-	year            = 2005,
-	journal         = {Journal of Applied Physics},
-	volume          = 97,
-	issue           = 7,
-	doi           = {https://doi.org/10.1063/1.1883308}
-}
-
-@article{ref3,
-  author = {J.A.C. Modesto and S. Dorbolo and H. Katsuragi and F. Pacheco-Vázquez and Y.D. Sobral},
-  title = {Compression of a granular layer composed of repelling magnetic particles},
-  journal = {Granular Matter},
-  year = {2022},
-  note = {Submitted}
-  }
-
-@article{ref1,
-  author= {K.W. Yung and P.B. Landecker and D.D. Villani},
-  title = {An analytic solution for the force between two magnetic dipoles}, 
-  journal = {Physical Separation in Science and Engineering},
-  volume = {9},
-  year = {1998},
-  pages = {39--52},
-  doi = {https://doi.org/10.1155/1998/79537}
-}
-
-@article{ref2,
-  author= {K.W. Yung and P.B. Landecker and D.D. Villani},
-  title = {An analytic solution for the torque between two magnetic dipoles}, 
-  journal = {Physical Separation in Science and Engineering},
-  volume = {10},
-  year = {1999},
-  pages = {29--33},
-  doi = {https://doi.org/10.1155/1999/97902}
-}
-
-@article{ref4,
-  author = {J.A.C. Modesto and F.R Cunha and Y.D. Sobral},
-  title = {Aggregation patterns in systems composed of few magnetic particles},
-  journal = {Journal of Magnetism and Magnetic Materials},
-  volume = {512},
-  year = {2020},
-  pages = {166664},
-  issn = {0304-8853},
-  doi = {https://doi.org/10.1016/j.jmmm.2020.166664},
-  url = {https://www.sciencedirect.com/science/article/pii/S0304885319327854}
-  }
-  
-@article{ref5,
-  author = {E. Pennestri and V. Rossi and P. Salvini and P.P. Valentin},
-  title = {Review and comparison of dry friction force models},
-  journal = {Nonlinear Dyn},
-  volume = {83},
-  year = {2016},
-  pages = {1785–1801},
-  doi = {https://doi.org/10.1007/s11071-015-2485-3}
-  }
-  
-@article{Sosa2013,
-  author = {M, J. and V. Sosa},
-  title = {Alternative Method to Calculate the Magnetic Field of Permanent Magnets With Azimuthal Symmetry},
-  journal = {Revista Mexicana De Física},
-  volume = {59},
-  number = {1},
-  year = {2013},
-  pages = {8–17},
-  howpublished = "\url{https://rmf.smf.mx/ojs/index.php/rmf-e/article/view/4692}",
-  note = "[Online; accessed 19-July-2008]"
-  }
-  
-@article{Yang1990,
-  author = {Yang, Z. J. and Johansen, T. H. and Bratsberg, H. and Helgesen, G. and Skjeltorp, A. T.},
-  title = {Potential and force between a magnet and a bulk $\text{Y}_1\text{Ba}_2\text{Cu}_3\text{O}_{7-\delta}$ superconductor studied by a mechanical pendulum},
-  journal = {Superconductor Science and Technology},
-  volume = {3},
-  number = {12},
-  year = {1990},
-  pages = {591–597},
-  doi = {doi:10.1088/0953-2048/3/12/004}
-  }
-
-@book{SpatialTess,
-   title =     {Spatial Tessellations: Concepts and Applications of Voronoi Diagrams, Second Edition},
-   author =    {Atsuyuki Okabe and Barry Boots and Kokichi Sugihara and Sung Nok Chiu and D. G. Kendall(auth.)},
-   publisher = {John Wiley \& Sons Ltd},
-   isbn =      {9780471986355,9780470317013},
-   year =      {2000},
-   series =    {Wiley Series in Probability and Statistics},
-   edition =   {2},
-   url =       {http://gen.lib.rus.ec/book/index.php?md5=842f451c85c755a21874e5479c8c9bc9}
-}
-
-@misc{DaveMount21,
-  author        = {David M. Mount},
-  title         = {Lecture notes in  Computational Geometry,},
-  month         = {Fall},
-  year          = {2021},
-  publisher = {University of Maryland},
-  url = {http://www.cs.umd.edu/class/fall2021/cmsc754/Lects/cmsc754-fall-2021-lects.pdf}
-}
-
 @misc{notas-aula-IMCEDO,
   author        = {Yuri Dumaresq Sobral},
   title         = {Notas de aula do curso de Introdução a Métodos Computacionais 
@@ -118,4 +15,16 @@
   url={https://books.google.com.br/books?id=c7LItwEACAAJ},
   year={2018},
   publisher={CRC Press}
+}
+
+@book{iserles2008,
+    place={Cambridge},
+    edition={2},
+    series={Cambridge Texts in Applied Mathematics},
+    title={A First Course in the Numerical Analysis of Differential Equations}, 
+    DOI={10.1017/CBO9780511995569},
+    publisher={Cambridge University Press},
+    author={Iserles, Arieh},
+    year={2008},
+    collection={Cambridge Texts in Applied Mathematics}
 }
